feat: new showcases - updates showcases templates to acommodate for images - updates intro styles - updates images styles

--- a/showcases/inselect.html
+++ b/showcases/inselect.html
@@ -71,12 +71,32 @@
             </div>
           </div>
         </div>
+      </div>
+      <div
+        class="promo -big -with-margin"
+        style="background-image: url('../images/inselect-1.jpg')"
+      >
+      </div>
+
+      <div class="container">
         <div class="about-detail">
           <h2>About the Project</h2>
-          <p>Whilst imaging a whole drawer of specimens is relatively quick, manually segmenting
+          <p>
+            Whilst imaging a whole drawer of specimens is relatively quick, manually segmenting
             the specimens is a time consuming process. Inselect was developed to address this
             problem – it can crop individual images of specimens from whole-drawer scans and
-            similar images that are generated through digitisation of museum collections.</p>
+            similar images that are generated through digitisation of museum collections.
+          </p>
+        </div>
+      </div>
+
+      <div
+        class="promo -big"
+        style="background-image: url('../images/inselect-2.jpg')"
+      ></div>
+
+      <div class="container">
+        <div class="about-detail">
           <p>Inselect combines image processing, barcode reading, validation of user-defined
             metadata and batch processing to offer a high level of automation that can greatly
             increase the efficiency of digitisation workflows.</p>
@@ -84,7 +104,17 @@
             provided which gives the user the option to resize, move, create or delete
             segmentation areas. The metadata for each specimen can then be manually modified and
             entered by the user.</p>
-          <h3>Webinar</h3>
+        </div>
+      </div>
+
+        <div
+          class="promo -big"
+          style="background-image: url('../images/inselect-3.jpg')"
+        ></div>
+
+      <div class="container">
+        <div class="about-detail">
+          <h2>Webinar</h2>
           <p>
             A webinar was run through <a rel="noopener noreferrer" target="_blank"
                                          href="https://www.idigbio.org/">iDigBio</a> on the 29th
@@ -95,19 +125,6 @@
             and below:
           </p>
           <iframe src="https://widgets.figshare.com/articles/3208021/embed?show_title=0" width="460" height="345" frameborder="0"></iframe>
-        </div>
-      </div>
-
-      <div class="promo">
-        <div class="img-holder">
-          <div class="img-frame">
-            <picture>
-              <source srcset="../images/img01-small.jpg, ../images/img01-small@2x.jpg 2x"
-                      media="(max-width: 767px)">
-              <source srcset="../images/img01-large.jpg, ../images/img01-large@2x.jpg 2x">
-              <img src="../images/img01-large.jpg" alt="image description">
-            </picture>
-          </div>
         </div>
       </div>
 
