--- a/showcases/magnified-crowdsourcing-projects.html
+++ b/showcases/magnified-crowdsourcing-projects.html
@@ -71,7 +71,12 @@
             </div>
           </div>
         </div>
+      </div>
 
+      <div class="container -with-vertical">
+        <div
+          class="promo -vertical"
+          style="background-image: url(../images/crowdsourcing-1.jpg)"></div>
         <div class="about-detail">
           <h2>About the Project</h2>
           <p>A specimen image only tells a small part of the story. Vital contextual information
@@ -80,12 +85,28 @@
             be difficult to capture automatically with accuracy. Crowdsourcing – using citizen
             scientists and volunteers to perform tasks which collect data and integrate into
             research workflows – is a potentially very effective way of addressing this problem.
-            SYNTHESYS3 partnered with <a target="_blank" rel="noopener noreferrer"
-                                         href="https://www.notesfromnature.org/">Notes from
-              Nature</a> , part of the <a class="https://www.zooniverse.org/">Zooniverse</a>
+            SYNTHESYS3 partnered with
+            <a target="_blank"
+               rel="noopener noreferrer"
+               href="https://www.notesfromnature.org/">
+              Notes from Nature
+            </a>
+            , part of the
+            <a class="https://www.zooniverse.org/">Zooniverse</a>
             crowdsourcing platform, to launch crowdsourcing projects centered around the capture
             of handwritten label data for digitized museum collections. The first two projects
             were as follows:</p>
+
+        </div>
+      </div>
+
+      <div
+        class="promo -big"
+        style="background-image: url('../images/crowdsourcing-2.png')"
+      ></div>
+
+      <div class="container">
+        <div class="about-detail">
           <h3>Miniature Lives Magnified</h3>
           <p>The pilot project, launched in August 2016, concerned a collection of chalcids – a
             group of parasitoid wasps – from the Natural History Museum, London. Chalcids are of
@@ -102,17 +123,10 @@
         </div>
       </div>
 
-      <div class="promo">
-        <div class="img-holder">
-          <div class="img-frame">
-            <picture>
-              <source srcset="../images/img01-small.jpg, ../images/img01-small@2x.jpg 2x"
-                      media="(max-width: 767px)">
-              <source srcset="../images/img01-large.jpg, ../images/img01-large@2x.jpg 2x">
-              <img src="../images/img01-large.jpg" alt="image description">
-            </picture>
-          </div>
-        </div>
+      <div
+        class="promo -horizontal"
+        style="background-image: url('../images/crowdsourcing-3.jpg')"
+      >
       </div>
 
       <div class="container">
