--- a/showcases/zoosphere.html
+++ b/showcases/zoosphere.html
@@ -53,82 +53,101 @@
       <div class="container">
         <ul>
           <li><a href="inselect.html">Inselect</a></li>
-          <li><a href="magnified-crowdsourcing-projects.html">‘Magnified’ Crowdsourcing Projects</a></li>
+          <li><a href="magnified-crowdsourcing-projects.html">‘Magnified’ Crowdsourcing Projects</a>
+          </li>
           <li class="active"><a href="zoosphere.html">Zoosphere</a></li>
-          <li><a href="collections-self-assesment-tool.html">Collections Self-Assessment Tool</a></li>
+          <li><a href="collections-self-assesment-tool.html">Collections Self-Assessment Tool</a>
+          </li>
         </ul>
       </div>
     </nav>
     <div class="container">
       <!-- project block -->
-      <div class="intro-text">
-        <h1>ZooSphere</h1>
-        <div class="text">
-          <div class="btn-holder">
-            <a target="_blank" rel="noopener noreferrer" href="http://www.zoosphere.net/" class="more">Go to Project Site</a>
+      <div class="container">
+        <div class="intro-text">
+          <h1>ZooSphere</h1>
+          <div class="text">
+            <div class="btn-holder">
+              <a target="_blank" rel="noopener noreferrer" href="http://www.zoosphere.net/"
+                 class="more">Go to Project Site</a>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="about-detail">
-        <h2>About the Project</h2>
-        <p>The costs of travelling between institutions to access particular collections can
-          be high and often unmanageable for researchers. Specimen postal loan processes can
-          be lengthy, inherently risky and are not always possible. A solution to this is to
-          provide digital ‘surrogates’ of specimens that can be accessed and usefully studied.
-          Developed by the Museum fur Naturkunde Berlin, Zoosphere is a digitization tool that
-          aims to generate an open, international repository for high-resolution, multi-angle
-          image sequences of biological specimens. As well as facilitating and speeding up the
-          research process, this also improves the accessibility of scientific specimens by
-          making them available to the general public.</p>
+      <div
+        class="promo -big -with-margin"
+        style="background-image: url('../images/zoosphere-1.png')"
+      >
       </div>
-    </div>
 
-    <div class="promo">
-      <div class="img-holder">
-        <div class="img-frame">
-          <picture>
-            <source srcset="../images/img01-small.jpg, ../images/img01-small@2x.jpg 2x"
-                    media="(max-width: 767px)">
-            <source srcset="../images/img01-large.jpg, ../images/img01-large@2x.jpg 2x">
-            <img src="../images/img01-large.jpg" alt="image description">
-          </picture>
+      <div class="container">
+        <div class="about-detail">
+          <h2>About the Project</h2>
+          <p>The costs of travelling between institutions to access particular collections can
+            be high and often unmanageable for researchers. Specimen postal loan processes can
+            be lengthy, inherently risky and are not always possible. A solution to this is to
+            provide digital ‘surrogates’ of specimens that can be accessed and usefully studied.
+            Developed by the Museum fur Naturkunde Berlin, Zoosphere is a digitization tool that
+            aims to generate an open, international repository for high-resolution, multi-angle
+            image sequences of biological specimens. As well as facilitating and speeding up the
+            research process, this also improves the accessibility of scientific specimens by
+            making them available to the general public.</p>
+
+          <h2>How it works</h2>
+          <p>The ‘ZooSphere’ itself consists of a turning frame upon which a pinned specimen is
+            set, in front of a camera which is mounted on a movable slide. Once calibrated, the
+            ZooSphere software instructs the frame and turntable to move in particular ways,
+            allowing image capture from up to 1,000 different perspectives around the object.
+            The images are then stacked and tiled, and the resulting sequence is published on
+            the
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="http://www.zoosphere.net/project">
+              ZooSphere website
+            </a>.
+          </p>
         </div>
       </div>
-    </div>
 
-    <div class="container">
-      <div class="about-detail">
-        <h2>How it works</h2>
-        <p>The ‘ZooSphere’ itself consists of a turning frame upon which a pinned specimen is
-          set, in front of a camera which is mounted on a movable slide. Once calibrated, the
-          ZooSphere software instructs the frame and turntable to move in particular ways,
-          allowing image capture from up to 1,000 different perspectives around the object.
-          The images are then stacked and tiled, and the resulting sequence is published on
-          the <a target="_blank" rel="noopener noreferrer"
-                 href="http://www.zoosphere.net/project">ZooSphere website</a>.</p>
-        <p>Zoosphere has been featured on the
-          <a
-            rel="noopener noreferrer"
-            target="_blank"
-            href="https://www.google.com/culturalinstitute/beta/exhibit/_QKyRH8HjbOkKA">
-            Google Cultural Institute
-          </a>.
-        </p>
+      <div
+        class="promo -big"
+        style="background-image: url('../images/zoosphere-2.png')"
+      >
+      </div>
 
-        <h2>Using ZooSphere</h2>
-        <p>
-          The specimens currently available on ZooSphere can be freely browsed and searched
-          for. The project itself remains in an early stage, with wide release of both
-          hardware and software components still pending. Please see
-          <a
-            target="_blank"
-            rel="noopener noreferrer"
-            href="http://www.zoosphere.net/project">
-            ZooSphere website
-          </a>
-          for updates or follow the project on Social Media.
-        </p>
+      <div
+        class="promo -big"
+        style="background-image: url('../images/zoosphere-3.jpg')"
+      >
+      </div>
+
+      <div class="container">
+        <div class="about-detail">
+          <p>Zoosphere has been featured on the
+            <a
+              rel="noopener noreferrer"
+              target="_blank"
+              href="https://www.google.com/culturalinstitute/beta/exhibit/_QKyRH8HjbOkKA">
+              Google Cultural Institute
+            </a>.
+          </p>
+
+          <h2>Using ZooSphere</h2>
+          <p>
+            The specimens currently available on ZooSphere can be freely browsed and searched
+            for. The project itself remains in an early stage, with wide release of both
+            hardware and software components still pending. Please see
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="http://www.zoosphere.net/project">
+              ZooSphere website
+            </a>
+            for updates or follow the project on Social Media.
+          </p>
+        </div>
       </div>
     </div>
   </main>
