fix: update texts

--- a/showcases/collections-self-assesment-tool.html
+++ b/showcases/collections-self-assesment-tool.html
@@ -89,8 +89,8 @@
           <h2>About the Project</h2>
           <p>
             The Collections Self-Assessment tool (CSAT) is a free online tool, developed during
-            SYNTHESYS2 (2008 – 2013), as a means of allowing institutions to assess aspects of
-            their collections care and management with an objective and unified set of
+            SYNTHESYS2 and expanded in SYNTHES3, as a means of allowing institutions to assess
+            aspects of their collections care and management using a common set of assessment
             criteria.
           </p>
         </div>
@@ -98,9 +98,8 @@
         <div class="about-detail">
           <h2>How it works</h2>
           <p>
-            Each institution that signs up to the CSAT can register as many departments as
-            required, each of which is assessed separately under each of the following
-            categories:
+            Each institution that signs up to the CSAT can register as many departments as required,
+            each of which is assessed separately under each of the following categories:
           <ul>
             <li>Collections Management</li>
             <li>Collections Care</li>
@@ -110,17 +109,16 @@
           </ul>
           </p>
           <p>The infrastructure and buildings standards of the institution as a whole are also assessed.</p>
-          <p>There is currently a total of 89 distinct criteria across the 7 categories in the
-            CSAT. The assessor will decide whether the institution has Not Met, Partially Met,
-            Mainly Met, Met, or Exceeded each criteria, with a space to add clarifying comments.
-            The resulting report uses a Red-Amber-Green traffic light system to demonstrate the
-            urgency with which any unmet criteria should be addressed, along with advice on how
-            best to approach doing so.</p>
+          <p>As of September 2017 there are total of 89 distinct criteria across the 7 categories in
+            the CSAT tool. The assessor will decide the extent to which the institution has met each
+            criteria, with a space to add clarifying comments. The resulting report uses a
+            Red-Amber-Green traffic light system to demonstrate the urgency with which any unmet
+            criteria should be addressed, along with advice on how best to approach doing so.</p>
           <p>Self-assessments can be re-taken as many times as required by the institution to measure progress.</p>
           <p>So far, 26 institutions have filled out the CSAT with 31 further institutions
-            registered on the site or with assessments in progress. A 2015 update resulted in
-            the inclusion of Digital and Molecular collections as part of the initiative to
-            develop unified management policies for new physical and virtual collections.</p>
+            registered on the site or with assessments in progress. A 2015 update resulted in the
+            inclusion of Digital and Molecular collections as part of the initiative to develop
+            unified management policies for new physical and virtual collections.</p>
           <p>To sign your institution up to the CSAT, please visit
             <a target="_blank"
                rel="noopener noreferrer"
