--- a/showcases/inselect.html
+++ b/showcases/inselect.html
@@ -82,10 +82,10 @@
         <div class="about-detail">
           <h2>About the Project</h2>
           <p>
-            Whilst imaging a whole drawer of specimens is relatively quick, manually segmenting
-            the specimens is a time consuming process. Inselect was developed to address this
-            problem – it can crop individual images of specimens from whole-drawer scans and
-            similar images that are generated through digitisation of museum collections.
+            Whilst imaging a whole drawer of specimens is relatively quick, manually segmenting the
+            specimens is a time consuming process. Inselect was developed to address this problem –
+            it can crop individual images of specimens from whole-drawer scans and similar images
+            that are generated through digitisation of museum collections.
           </p>
         </div>
       </div>
@@ -100,10 +100,9 @@
           <p>Inselect combines image processing, barcode reading, validation of user-defined
             metadata and batch processing to offer a high level of automation that can greatly
             increase the efficiency of digitisation workflows.</p>
-          <p>Once the draw is scanned and processed through Inselect, a segmented image is
-            provided which gives the user the option to resize, move, create or delete
-            segmentation areas. The metadata for each specimen can then be manually modified and
-            entered by the user.</p>
+          <p>Once the draw is scanned and processed through Inselect, a segmented image is provided
+            which gives the user the option to resize, move, create or delete segmentation areas.
+            The metadata for each specimen can then be manually modified and entered by the user.</p>
         </div>
       </div>
 
@@ -131,17 +130,17 @@
       <div class="container">
         <div class="about-detail">
           <h2>Development</h2>
-          <p>Inselect was developed by a team at the Natural History Museum, in collaboration
-            with scientists from Stellenbosch University in South Africa. A workshop was held in
-            September 2014 to develop a specification and prototype, which was then presented at
-            the Taxonomic Database Working Group (TDWG) meeting in October 2014. The program was
-            subsequently developed for wider release and testing amongst SYNTHESYS3 Taxonomic
-            Access Facilities (TAFs) and has undergone continuous development and improvement
-            based on feedback from user communities.
+          <p>Inselect was developed by a team at the Natural History Museum, in collaboration with
+            scientists from Stellenbosch University in South Africa. A workshop was held in
+            September 2014 to develop a specification and prototype, which was then presented at the
+            Taxonomic Database Working Group (TDWG) meeting in October 2014. The program was
+            subsequently developed for wider release and testing amongst SYNTHESYS3 Taxonomic Access
+            Facilities (TAFs) and has undergone continuous development and improvement based on
+            feedback from user communities.
           </p>
-          <p>To date, Inselect has been downloaded 737 times. It is cross-platform (Windows and
-            Mac OSX) and open source with modular architecture. To download or read more about
-            the software, including a full list of user guides, please visit the <a
+          <p>To date, Inselect has been downloaded 737 times. It is cross-platform (Windows and Mac
+            OSX) and open source with modular architecture. To download or read more about the
+            software, including a full list of user guides, please visit the <a
               rel="noopener noreferrer" target="_blank"
               href="https://naturalhistorymuseum.github.io/inselect/">website</a>
             or <a rel="noopener noreferrer" target="_blank"
