--- a/showcases/magnified-crowdsourcing-projects.html
+++ b/showcases/magnified-crowdsourcing-projects.html
@@ -79,13 +79,13 @@
           style="background-image: url(../images/crowdsourcing-1.jpg)"></div>
         <div class="about-detail">
           <h2>About the Project</h2>
-          <p>A specimen image only tells a small part of the story. Vital contextual information
-            is stored on labels, and turning these into useful digital data presents a
-            challenge. Despite improvements in handwriting recognition software, label data can
-            be difficult to capture automatically with accuracy. Crowdsourcing – using citizen
-            scientists and volunteers to perform tasks which collect data and integrate into
-            research workflows – is a potentially very effective way of addressing this problem.
-            SYNTHESYS3 partnered with
+          <p>A specimen image only tells a small part of the story. Vital contextual information is
+            stored on labels, and turning these into useful digital data presents a challenge.
+            Despite improvements in handwriting recognition software, label data can be difficult to
+            capture automatically with accuracy. Crowdsourcing – using citizen scientists and
+            volunteers to perform tasks which collect data and integrate into research workflows –
+            is a potentially very effective way of addressing this problem. SYNTHESYS3 partnered
+            with
             <a target="_blank"
                rel="noopener noreferrer"
                href="https://www.notesfromnature.org/">
@@ -93,9 +93,9 @@
             </a>
             , part of the
             <a class="https://www.zooniverse.org/">Zooniverse</a>
-            crowdsourcing platform, to launch crowdsourcing projects centered around the capture
-            of handwritten label data for digitized museum collections. The first two projects
-            were as follows:</p>
+            crowdsourcing platform, to launch crowdsourcing projects centered around the capture of
+            handwritten label data for digitized museum collections. The first two projects were as
+            follows:</p>
 
         </div>
       </div>
@@ -111,15 +111,15 @@
           <p>The pilot project, launched in August 2016, concerned a collection of chalcids – a
             group of parasitoid wasps – from the Natural History Museum, London. Chalcids are of
             high scientific importance due to their role as a biological control agent which can
-            protect crops and reduce invasive species. Around 100,000 microscope slides
-            containing chalcids were imaged and their labels transcribed by 1,000+ ‘digital
-            volunteers’ over a 10 month period.</p>
+            protect crops and reduce invasive species. Around 100,000 microscope slides containing
+            chalcids were imaged and their labels transcribed by 1,000+ ‘digital volunteers’ over a
+            10 month period.</p>
           <h3>Miniature Fossils Magnified</h3>
           <p>The second Magnified project focused on digitized slides containing foraminifera -
-            ocean sediment-dwelling organisms – from shallow tropical seas. These tiny specimens
-            are hugely important in learning how the environment, climate and ocean have changed
-            over the past 500 million years. So far 2,071 slides have been transcribed with a
-            third and final batch being released in Autumn 2017.</p>
+            ocean sediment-dwelling organisms – from shallow tropical seas. These tiny specimens are
+            hugely important in learning how the environment, climate and ocean have changed over
+            the past 500 million years. So far 2,071 slides have been transcribed with a third and
+            final batch being released in Autumn 2017.</p>
         </div>
       </div>
 
@@ -132,11 +132,11 @@
       <div class="container">
         <div class="about-detail">
           <h2>Taking Part</h2>
-          <p>The latest iterations of Miniature Lives Magnified and Miniature Fossils Magnified
-            have been completed and are now closed. A further batch of foraminifera slides from
-            Miniature Fossils Magnified are due for release in September 2017. Further projects
-            are also planned in the future using collections from the Natural History Museum,
-            London and other SYNTHESYS partners. Please continue to check the <a
+          <p>The latest iterations of Miniature Lives Magnified and Miniature Fossils Magnified have
+            been completed and are now closed. A further batch of foraminifera slides from Miniature
+            Fossils Magnified are due for release in September 2017. Further projects are also
+            planned in the future using collections from the Natural History Museum, London and
+            other SYNTHESYS partners. Please continue to check the <a
               href="https://www.notesfromnature.org/active-expeditions/Magnified">Magnified</a>
             page for future participation opportunities.
           </p>
@@ -150,6 +150,11 @@
                    href="http://www.nhm.ac.uk/take-part/citizen-science/miniature-fossils-magnified.html">Miniature
               Fossils Magnified</a></li>
           </ul>
+          SYNTHESYS also brought together a number of additional crowdsourcing efforts at partner
+          institutions, including Les Herbonautes at the Paris Museum (*), and the Swedish Museum of
+          Natural History (Naturhistoriska riksmuseet). This family of projects allows institutions
+          to promote their citizen science transcription activities under a common banner supporting
+          wider engagement with natural history collections.
           </p>
         </div>
       </div>
