--- a/showcases/zoosphere.html
+++ b/showcases/zoosphere.html
@@ -84,23 +84,20 @@
       <div class="container">
         <div class="about-detail">
           <h2>About the Project</h2>
-          <p>The costs of travelling between institutions to access particular collections can
-            be high and often unmanageable for researchers. Specimen postal loan processes can
-            be lengthy, inherently risky and are not always possible. A solution to this is to
-            provide digital ‘surrogates’ of specimens that can be accessed and usefully studied.
-            Developed by the Museum fur Naturkunde Berlin, Zoosphere is a digitization tool that
-            aims to generate an open, international repository for high-resolution, multi-angle
-            image sequences of biological specimens. As well as facilitating and speeding up the
-            research process, this also improves the accessibility of scientific specimens by
-            making them available to the general public.</p>
+          <p>Specimen postal loans can be lengthy, inherently risky and are not always possible. A
+            solution to this is to provide digital ‘surrogates’ of specimens that can be accessed
+            and usefully studied. Developed by the Museum fur Naturkunde Berlin, Zoosphere is a
+            digitisation tool that aims to generate an open, international repository for
+            high-resolution, multi-angle image sequences of biological specimens. As well as
+            facilitating and speeding up the research process, this also improves the accessibility
+            of scientific specimens by making them available to the general public.</p>
 
           <h2>How it works</h2>
-          <p>The ‘ZooSphere’ itself consists of a turning frame upon which a pinned specimen is
-            set, in front of a camera which is mounted on a movable slide. Once calibrated, the
-            ZooSphere software instructs the frame and turntable to move in particular ways,
-            allowing image capture from up to 1,000 different perspectives around the object.
-            The images are then stacked and tiled, and the resulting sequence is published on
-            the
+          <p>The ‘ZooSphere’ itself consists of a turning frame upon which a pinned specimen is set,
+            in front of a camera which is mounted on a movable slide. Once calibrated, the ZooSphere
+            software instructs the frame and turntable to move in particular ways, allowing image
+            capture from up to 1,000 different perspectives around the object. The images are then
+            stacked and tiled, and the resulting sequence is published on the
             <a
               target="_blank"
               rel="noopener noreferrer"
@@ -136,9 +133,9 @@
 
           <h2>Using ZooSphere</h2>
           <p>
-            The specimens currently available on ZooSphere can be freely browsed and searched
-            for. The project itself remains in an early stage, with wide release of both
-            hardware and software components still pending. Please see
+            The specimens currently available on ZooSphere can be freely browsed and searched for.
+            The project itself remains in an early stage, with wide release of both hardware and
+            software components still pending. Please see
             <a
               target="_blank"
               rel="noopener noreferrer"
